# popper-compiler

./: .gitignore  Cargo.toml  GRAMMAR.md  README.md  STEP.md  a.out  build.rs  chatgpt.ll  compiler.nix  file.txt  hello.pop  ir.txt  my_program  newfile.sh  output  output.ll  pico.save  popper-compiler.nix  rmv.txt  shell.nix  test.bc  test.ll  test.s
.github/workflows/: rust-clippy.yml
.mps/: workspace.xml
core/: io.rs
crates/popper_asm/: Cargo.toml
crates/popper_ast/: Cargo.toml
crates/popper_ast/src/: ast.rs  attribute.rs  constant.rs  expr.rs  file.rs  index.rs  layer.rs  lib.rs  memory.rs  span.rs  stmt.rs  token.rs  type_.rs  types.rs  visitor.rs
crates/popper_ast/src/basic_stmt/: assign.rs  block.rs  break_stmt.rs  external.rs  for_stmt.rs  if_stmt.rs  import_stmt.rs  let_stmt.rs  mod.rs  while_stmt.rs
crates/popper_ast/src/function/: args.rs  call.rs  mod.rs  return_expr.rs  sign.rs  va_arg.rs
crates/popper_ast/src/op/: bin_op.rs  group.rs  mod.rs  unary_op.rs
crates/popper_ast/src/struct_stmt/: mod.rs
crates/popper_builtin/: Cargo.toml
crates/popper_builtin/src/: lib.rs
crates/popper_builtins/: Cargo.toml
crates/popper_bytecode/: Cargo.toml
crates/popper_codegen/: Cargo.toml
crates/popper_codegen_llvm/: Cargo.toml
crates/popper_common/: Cargo.toml
crates/popper_compiler/: Cargo.toml
crates/popper_compiler/src/: lib.rs  main.rs
crates/popper_context/: Cargo.toml
crates/popper_ebc/: Cargo.toml
crates/popper_error/: Cargo.toml
crates/popper_error/src/: alreadyexist.rs  cantmut.rs  diff_length_of_argument.rs  fieldnotfound.rs  lib.rs  modulenotfound.rs  namenotfound.rs  notallowed.rs  returnnotallowed.rs  typemismatch.rs  typenotspecified.rs
crates/popper_error_core/: Cargo.toml
crates/popper_error_macro/: Cargo.toml
crates/popper_flag/: Cargo.toml
crates/popper_index/: Cargo.toml
crates/popper_inkwell/: Cargo.toml
crates/popper_interpreter/: Cargo.toml
crates/popper_lang/: Cargo.toml
crates/popper_lang/src/: lib.rs  main.rs
crates/popper_lexer/: Cargo.toml
crates/popper_libc/: Cargo.toml  README.md
crates/popper_llvm/: Cargo.toml  build.rs
crates/popper_llvm/src/: analysis.rs  asm.rs  attribute.rs  basic_block.rs  builder.rs  context.rs  debug.rs  execution_engine.rs  instruction.rs  lib.rs  main.rs  metadata.rs  module.rs  util.rs
crates/popper_llvm/src/compiler/: constants.rs  exprs.rs  llvm_env.rs  mod.rs
crates/popper_llvm/src/compiler/stmts/: block_stmt.rs  external_stmt.rs  for_stmt.rs  function_stmt.rs  import_stmt.rs  let_stmt.rs  mod.rs  return_stmt.rs
crates/popper_llvm/src/modules/: core.rs  mod.rs
crates/popper_llvm/src/object/: mod.rs  pop_object.rs  pop_pointer.rs  pop_string.rs  pop_type.rs
crates/popper_llvm/src/types/: array_types.rs  float_types.rs  function_types.rs  int_types.rs  mod.rs  pointer_types.rs  struct_type.rs  vectore_type.rs  void_type.rs
crates/popper_llvm/src/value/: array_value.rs  float_value.rs  function_value.rs  int_value.rs  mod.rs  pointer_value.rs  struct_value.rs
crates/popper_llvm/std /: lib.json
crates/popper_llvm/std /io/: module.json
crates/popper_mem/: Cargo.toml
crates/popper_mir/: Cargo.toml
crates/popper_module/: Cargo.toml
crates/popper_module/src/: lib.rs
crates/popper_panic/: Cargo.toml
crates/popper_parser/: Cargo.toml
crates/popper_parser/src/: attribute.rs  cursor.rs  error.rs  expect.rs  lib.rs  macros.rs  main.rs  parse.rs  parser.rs  popper.lalrpop  ty.rs
crates/popper_parser/src/expr/: literal.rs  mod.rs  operator.rs
crates/popper_parser/src/lexer/: ident.rs  int.rs  mod.rs  strings.rs  test.rs
crates/popper_parser/src/stmt/: block.rs  function.rs  if_.rs  let_.rs  mod.rs
crates/popper_parser/src/util/: ignore.rs  mod.rs  or.rs  test.rs
crates/popper_parser_old/: output.txt
crates/popper_sac/: Cargo.toml
crates/popper_sac/src/: compiler.rs  env.rs  jump.rs  label.rs  lib.rs  stack.rs
crates/popper_sac/src/bytecode_compiler/: jump.rs  mod.rs
crates/popper_sbc/: Cargo.toml
crates/popper_sbc/src/: debug.rs  instr.rs  ir_sb.rs  lib.rs  symbol_table.rs  value.rs
crates/popper_sbc/src/compiler/: expr_compiler.rs  mod.rs  stmt_compiler.rs
crates/popper_sbc/src/tests/: mod.rs  test_bytecodes.rs  test_expr_compiler.rs  test_stmt_compiler.rs
crates/popper_sbc/src/tests/assets/: test_add_op.json  test_call.json  test_function.json  test_while_stmt.json
crates/popper_semantic_analyzer/: Cargo.toml
crates/popper_semantic_analyzer/src/: error.rs  expr_analyzer.rs  hir.rs  lib.rs  stmt_analyzer.rs  symbol_resolver.rs  symbol_table.rs  test.rs  type_checker.rs  typed.rs  visitor.rs
crates/popper_semantic_analyzer/src/errors/: alreadyexist.rs  diff_length_of_argument.rs  mod.rs  namenotfound.rs  typemismatch.rs
crates/popper_semantic_analyzer/src/hir/: codegen.rs
crates/popper_semantic_analyzer/src/tests/: mod.rs  test_stmt_analyzer.rs
crates/popper_semantic_analyzer/src/tests/assets/: already_exist_fn.json  bad_type_add.json  call_diff_length_argument.json  call_mismatch_type.json  test_function.json  unknow_var.json
crates/popper_semantic_analyzer/src/tool/: mod.rs  name_similarity.rs
crates/popper_semantic_analyzer/tests/: Cargo.toml
examples/: example_external.rs  helloworld  helloworld.pop
examples/ex1/: Cargo.toml
popper-backend/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  makefile
popper-backend-2/: CMakeLists.txt  xmake.lua
popper-spec/: add-spec  let-spec
popper-std-lib-tool/: Cargo.toml
popper_macro/: Cargo.toml
popper_macro/src/: lib.rs  main.rs
popper_to_rs/: Cargo.toml
popper_to_rs/src/: lib.rs  main.rs
scripts/: clippy.py  fix.py  fmt.py  git.py  install.py  install_linux copie.sh  install_linux.sh  run.py
src/: api.rs  ast.rs  compiler.rs  errors.rs  executer.rs  grammar.pest  lexer.rs  lib.rs  main (1).rs  main.rs  parser.rs  popper.lalrpop  std_t.rs  test.rs  test.txt  test2.txt  tlang.lalrpop  tree.rs  value.rs
std/: cmp.pop  io.pop  itertool.pop
stdlib/: _core.ll  io.ll  io.rs
target_popper/: helloworld  helloworld.ll  io.ll
(+227 files in other folders)
