[package]
name = "popper_to_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"

[dependencies.syn]
version = "2.0.15"
features = ["full", "parsing", "extra-traits", "visit", "visit-mut"]

[dependencies.popper]
path = "../"

[lib]
proc-macro = true