[package]
name = "popper_ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.96", optional = true, features = ["derive"] }
serde_json = { version = "1.0.97", optional = true }


[features]
serde = ["dep:serde", "dep:serde_json"]
extra-trait = ["default-trait"]
default-trait = []
debug = ["serde", "extra-trait"]
visitor = ["extra-trait"]




