[package]
name = "popper_builtin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
popper_ast = { path = "../popper_ast" }
popper_asm = { git = "https://github.com/popper-lang/popper-asm.git" }
popper_flag = { path = "../popper_flag" }
popper_error = { path = "../popper_error" }

