[package]
name = "popper_error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.3.0"
popper_ast = { path = "../popper_ast", features = ["extra-trait"]}
popper_common = { path = "../popper_common" }
thiserror = "1.0.40"

