[package]
name = "popper_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
popper_semantic_analyzer = { path = "../popper_semantic_analyzer" }
popper_parser = { path = "../popper_parser" }
popper_ast = { path = "../popper_ast" }
popper_sbc = { path = "../popper_sbc" }
popper_sac = { path = "../popper_sac" }
popper_asm = { path = "../popper_asm" }
popper_common = { path = "../popper_common" }
lazy_static = "1.4.0"

[profile.release]
debug = true
