[package]
name = "popper_llvm"
version = "0.1.0"
edition = "2021"


[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
    "llvm16-0",
] }

popper_ast = { path = "../popper_ast", features = ["visitor", "extra-trait"]}
lazy_static = "1.4.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.2"
llvm-ir = { git = "https://github.com/cdisselkoen/llvm-ir.git", branch = "main", features = ["llvm-16"] }
popper_builtins = { path = "../popper_builtins" }
