[package]
name = "popper_llvm"
version = "0.1.0"
edition = "2021"


[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
    "llvm16-0",
] }

popper_ast = { path = "../popper_ast", features = ["visitor", "extra-trait"]}
popper_common = { path = "../popper_common" , features = ["ast_path_to_path", "hash"]}
lazy_static = "1.4.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.2"
popper_builtins = { path = "../popper_builtins" }
