[package]
name = "popper_module"
version = "0.1.0"
edition = "2021"


[dependencies]
popper_ast = { path = "../popper_ast" , features = ["serde"]}
popper_error = { path = "../popper_error" }
serde = { version = "1.0.9", features = ["derive"] }
serde_json = "1.0.108"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"] }
