[package]
name = "popper_parser"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.3", features = ["perf", "std", "unicode"] }
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
popper_ast = { path = "../popper_ast", features = ["extra-trait"] }
popper_common = { path = "../popper_common", features = ["ast_path_to_path"]}
ariadne = "0.2.0"
serde_json = "1.0.97"
serde = { version = "1.0.97", features = ["derive"] }
popper_error = { path = "../popper_error" }


[build-dependencies]
lalrpop = "0.20.0"

[features]
logs = []
serde = ["popper_ast/serde"]

