[package]
name = "popper_sac"
version = "0.1.0"
edition = "2021"
description = "A Simple Asm Compiler in Popper Lang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
popper_ast = { path = "../popper_ast" , features = ["visitor"]}
popper_asm = { git = "https://github.com/popper-lang/popper-asm.git" }
popper_builtin = { path = "../popper_builtin" }
lazy_static = "1.4.0"
