[package]
name = "popper_sbc"
version = "0.1.0"
edition = "2021"
description = "Simple Bytecode Compiler for Popper Language"
license = "MIT"


[dependencies]
popper_flag = { path = "../popper_flag" }
popper_ast = { path = "../popper_ast", features = ["visitor", "extra-trait"] }

[dev-dependencies]
popper_ast = { path = "../popper_ast", features = ["visitor", "extra-trait", "serde"] }
